<resources>
    <string name="app_name">Batumi Travel Guide</string>
    <string name="general_info">General Info</string>
    <string name="local_dishes">Local Dishes</string>
    <string name="historical_places">Historical Places</string>
    <string name="useful_links">Useful Links</string>
    <string name="batumi">Batumi</string>
    <string name="info_visa_policy">Visa Policy of Georgia </string>
    <string name="arrow_image">Arrow Image</string>
    <string name="batumi_in_world_map_image">Batumi in World Map Image</string>
    <string name="batumi_location_image">Batumi Location Image</string>
    <string name="info_main_text">Batumi is a popular tourist destination known for its varying weather. It\'s a bustling seaside resort during warm seasons, but also it can get entirely covered in snow during winter.\nMuch of Batumi\'s economy revolves around tourism and gambling, but the city is also an important sea port and includes industries like shipbuilding, food processing and light manufacturing. Since 2010, Batumi has been transformed by the construction of modern high-rise buildings, as well as the restoration of classical 19th-century edifices lining its historic Old Town.</string>
    <string name="info_secondary_text">Batumi is the second-largest city of Georgia, located on the coast of the Black Sea in the country\'s southwest; bordering Turkey.</string>
    <string name="info_visa_full_text">Visitors to Georgia must obtain a visa from Georgian diplomatic missions unless they come from one of the visa exempt countries. Visitors must hold a passport (or identity card if a Turkish or EU citizen) valid for the period of intended stay, while Georgian citizens can enter with a valid or expired passport or identity card.\n\nThe following is the full list of the countries whose citizens have the right to enter and stay in Georgia without visa, for one full year (as of August 2018):\n\nAlbania\nAndorra\nAntigua and Barbuda\nArgentina\nArmenia\nAruba\nAustralia\nAzerbaijan\nBahamas\nBahrain\nBarbados\nBelarus\nBelgium\nBelize\nBermuda Islands\nBosnia and Herzegovina\nBotswana\nBrazil\nBrunei\nBritish Virgin Islands\nBulgaria\nCanada\nCayman Islands\nColombia\nCosta Rica\nCroatia\nCzech Republic\nCyprus\nDenmark\nDominican Republic\nEcuador\nEl Salvador\nEstonia\nFaroe Islands\nFalkland Islands\nFinland\nFrance\nFrench Polynesia\nNew Caledonia\nGermany\nGibraltar\nGreece\nGreenland\nGuernsey Islands\nHoly See\nHonduras\nHungary\nIceland\nItaly\nIreland\nIsrael\nJersey Islands\nJapan\nKazakhstan\nKorea\nKuwait\nKyrgyzstan\nLatvia\nLebanon\nLiechtenstein\nLithuania\nLuxembourg\nMalaysia\nMalta\nMann Islands\nMauritius\nMexico\nMoldova\nMonaco\nMontenegro\nNetherlands\nNetherlands Antilles\nNew Zealand\nNorway\nOman\nPanama\nPoland\nPortugal\nQatar\nRomania\nRussian Federation\nSaint Vincent and The Grenadines\nSan Marino\nSaudi Arabia\nSerbia\nSeychelles\nSingapore\nSlovakia\nSlovenia\nSouth Africa\nSpain\nSweden\nSwitzerland\nTajikistan\nThailand\nTurkey\nTurkmenistan\nTurks and Caicos Islands\nUkraine\nUnited Arab Emirates\nUnited Kingdom\nUnited States of America\nUzbekistan</string>
    <string name="chvishtari">Chvishtari</string>
    <string name="chvishtari_text">Chvishtari is a Georgian corn bread, filled with cheese.</string>
    <string name="pkhali">Pkhali (Walnut Salad)</string>
    <string name="pkhali_text">Pkhali is a dish that translates as a salad, but is more of a small appetizer. It is a patty of minced greens and ground walnuts.They also come with appetizers you can order on their own like the delicious red pepper stuffed with walnut paste. They are not the main dishes but usually menu items that can be ordered alone.</string>
    <string name="georgian_kebab">Georgian Kebab\n(with sour plum sauce)</string>
    <string name="georgian_kebab_text">Plum sauce may sound like it’s going to be sweet, but Georgian plum sauce is sour. It comes in red, which is a little sweeter, or green, which is the more sour of the two. It\'s not much different than the kebab that we know in Turkey, only, this kebab has a unique sauce that makes it more delicious than a normal kebab is.</string>
    <string name="khachapuri">Khachapuri</string>
    <string name="khachapuri_text">Khachapuri is a Georgian cheese bread or cheese pie. There are multiple versions of Khachapuri and they are all region specific.\nImeruli Khachapuri is in a circle-shape.\nMegruli khachapuri is similar too but has the ingredients both inside and outside.\nAcharuli khachapuri is a boat-shaped cheese bread with eggs, again both inside and outside.</string>
    <string name="trout">Trout\n(with pomegranate sauce)</string>
    <string name="trout_text">A popular Georgian seafood dish is trout with pomegranate sauce. The trout is fried whole, nice and crispy, and served with a sweet and savory pomegranate sauce.</string>
    <string name="eggplant_walnut_rolls">Badrijai Nigzvit\n(Eggplant Walnut Rolls)</string>
    <string name="eggplant_walnut_rolls_text">Another popular appetizer is badrijai nigvzit. Thin, long slices of eggplant (or aubergine) are cooked until brown and soft, then a paste of walnuts, vinegar, and spices is spread on the eggplant slices, which are then rolled.</string>
    <string name="kharcho">Kharcho</string>
    <string name="kharcho_text">Kharcho is a traditional Georgian soup. This soup is made with beef or chicken and can be served with or without rice. The version I suggest is the one that contains eggplants, zucchini, walnuts, and pomegranate that\'s served on hominy.</string>
    <string name="borjomi">Borjomi</string>
    <string name="borjomi_text">Borjomi is Georgia’s favorite mineral water. You can find bottled Borjomi everywhere, and you can visit Borjomi-Kharagauli National Park and drink the water straight from a fountain. Borjomi is also so popular in Russia, Russians travel to Georgia to visit the town of Borjomi so they can visit the place from which their favorite water comes.</string>
    <string name="ali_nino">Ali and Nino Statue</string>
    <string name="ali_nino_text">The monument represents figures of a man (Ali, a Muslim) and a woman (Nino, an Orthodox Christian) moving in circles for about 8–10 minutes and eventually passing through each other, forming one whole body for several second.\nThe monument was inspired by a the story of an Azerbaijani youth who falls in love with a Georgian woman but dies defending his country from Russian army.\nThe statue traveled to Venice and London before finding its permanent place in Batumi.\n\nThe statue is unique because it moves. First, they get close to each other; then they kiss each other in a quick way. And at last, they turn their backs into each other; meaning their happiness couldn\'t last and they stayed separate and sad all of their life.</string>
    <string name="alphabetical_chacha_towers">Alphabetic Tower and Chacha Clock Tower</string>
    <string name="alphabetical_chacha_towers_text">The Alphabetic Tower is a 130-meter-high structure. The tower symbolizes the uniqueness of the Georgian alphabet and people. The structure combines the design of DNA, in its familiar double helix pattern. Two helix bands rise up the tower holding 33 letters of the Georgian alphabet, each 4 meters tall and made of aluminum.\nIn the middle of the building is an exposed elevator shaft leading to the very top of the building, in the crown of the structure, where a colossal silver ball is located.\n\nThe Chacha Tower was designed by French architect Raymond Charles Père. It is decorated in an elaborate Ottoman style. A similar one can be see in Izmir/Turkey.</string>
    <string name="gonio_castle">Gonio Castle</string>
    <string name="gonio_castle_text">Gonio Castle (or Fortress) is a Roman fortification in Batumi, at the mouth of the Chorokhi River. The village sits 4 km north of the Turkish border.\nThe grave of Saint Matthias, one of the twelve apostles, is believed to be inside the Gonio Fortress. However, this is unverifiable as the Georgian government currently prohibits digging near the supposed gravesite. Other archaeological excavations are however taking place on the grounds of the fortress, focusing on Roman layers.\n\nGonio is currently experiencing a tourism boom. Most tourists come from Tbilisi in the summer months to enjoy beaches that are generally regarded as cleaner than other parts of Georgia.</string>
    <string name="medea">Medea</string>
    <string name="medea_text">The Medea monument in Batumi was designed by Davit Khmaladze and erected in Europe Square in 2007. In Greek mythology, Medea was a daughter of King Aieti, the king of Kolkheti in present day Western Georgia and known in most stories as an enchantress and is often depicted as being a priestess.</string>
    <string name="ters_ev">White Restaurant\n(yes, it\'s reverse)</string>
    <string name="ters_ev_text">White Restaurant is the first upside-down building of Georgia. Owners of canted house in Batumi decided to combine pleasure with restaurant; which not only can be admired for idea, but also for varied and delicious Georgian cuisine. Back in August 2011, the 24-year old architect designed upside down building was only in its \"joke\" discussion stage. But the strange idea came true in Batumi.\nThe canted restaurant looks like a small White House, the residence of the US President.</string>
    <string name="piazza">Piazza Square</string>
    <string name="piazza_text">The Square covers about 5700 square metres and it\'s one of the landmarks of city. It features luxury and boutique hotels, restaurants, cafes, pubs and interesting architectural elements.\nThe architecture is distinguished by mosaics and stained glass art. Live music is performed here daily and the square usually hosts concerts of world's famous musicians, visiting Batumi.</string>
    <string name="st_nicholas">St. Nicholas Church</string>
    <string name="st_nicholas_text">The St Nicholas Church is located in the very center of Batumi. This Church is more than 150 years old and it is one of the oldest churches in the city.\nAn initiator of construction of the Church was the Greek community of Batumi headed by mayor of the city Ilya Efremidi, a Greek by nationality.\nIn 1854 when Efremidi became a new mayor of the city he undertook large-scale construction works. His activity pleased the Turkish authorities (as Batumi was in Turkish control at that time) and they gave him their permission to build a temple but only without bells.\nIn 1865 the Greeks begin to build the temple on the land donated by Ilya Efremidi in favor of the temple. The money for construction of the temple was raised by the parishioners. The Temple became not only just a cultic building it was also the place where the life of the Greek community of Batumi was concentrated.\nIn 1878 Russian military troops brought a bell, which still decorates the temple up to date.\n\nNowadays the St. Nicholas Church is not only a cultic monument but also one of the city’s most beautiful architectural and historical monuments.</string>
    <string name="virgin_mary">Virgin Mary Cathedral</string>
    <string name="georgia_coat_of_arms">Georgia Coat of Arms</string>
</resources>