<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_light"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/georgia_coat_of_arms"
        android:padding="16dp"
        android:src="@drawable/georgia_coat_of_arms" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/text_view_general_info"
            style="@style/MainListTheme"
            android:text="@string/general_info" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_local_dishes">

        <TextView
            android:id="@+id/text_view_local_dishes"
            style="@style/MainListTheme"
            android:text="@string/local_dishes" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_historical_places">

        <TextView
            android:id="@+id/text_view_historical_places"
            style="@style/MainListTheme"
            android:text="@string/historical_places" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_useful_links">

        <TextView
            android:id="@+id/text_view_useful_links"
            style="@style/MainListTheme"
            android:text="@string/useful_links" />
    </FrameLayout>
</LinearLayout>